# macvds-code-samples

./: README.md
be-synth-module-main/: README.md  pyproject.toml
be-synth-module-main/app/: app.py  main.py  midi.py  shruti.py
be-synth-module-main/sf2_generator/: __init__.py  freq_iterator.py  sf2_generator.py  synthesizer.py  wav_generator.py
